src/translations/ja/sdk/android/v5/features/deep-linking.mdx
---
title: "ディープリンクの設定"
description: "ディープリンクを使用するには、SDKを設定します。"
slug: "ja/sdk/android/v5/features/deep-links"
---

ディープリンクを作成して、ユーザーをアプリ内の特定の場所に誘導します。Adjust SDKは、ユーザーがデバイスにアプリをインストール済みかどうかによって、異なるロジックを使用します。

-  ダイレクトディープリンクは、ユーザーがアプリをすでにデバイスにインストールしている場合に使用されます。そのリンクは、リンクで指定されたページにユーザーをリダイレクトします。
-  ディファードディープリンクは、ユーザーがアプリをデバイスにインストールしていない場合に使用されます。そのリンクは、ユーザーをアプリストアに送り、アプリを先にインストールしてもらいます。ユーザーがアプリをインストールすると、リンクで指定されたページが開きます。

SDKは、ユーザーがリンクからアプリを起動した後にディープリンクの情報を読み取ることができます。

## [スキーム名を設定する](configure-your-scheme-name)

ユーザーがアプリをインストールしている場合、ユーザーがディープリンク情報を含むリンクをクリックするとアプリが起動します。Adjust SDKには、ディープリンク情報を解析してアプリ全体で利用するためのツールが備わっています。ディープリンクを設定するには、一意の **スキーム名** を選択する必要があります。

ユーザーがディープリンクをクリックしたときに、特定のアクティビティを起動できます。これを行うには、以下の手順に従ってください。

1. `AndroidManifest.xml`ファイルでアクティビティに **スキーム名** を割り当てます。
2. アクティビティ定義欄に`intent-filter`ノードを追加します。
3. `intent-filter`ノード内に、 **スキーマ名** を含む`android:scheme`データノードを追加します。
4. [Android アプリリンク](https://help.adjust.com/ja/article/set-up-android-app-links)については、 `intent`フィルターを追加して、アプリが処理できるURLを指定します。`intent`フィルターで、 `data`要素を`android:autoVerify="true"`アトリビュートとともに含めます。

### [例](example)

この例は、`MainActivity`というアクティビティを **スキーム名** `adjustExample`で開くように設定する方法を示します。

<CodeBlock title="AndroidManifest.xml" highlight=".MainActivity, adjustExample">

```xml
<activity
   android:name=".MainActivity"
   android:configChanges="orientation|keyboardHidden"
   android:label="@string/app_name"
   android:screenOrientation="portrait">

   <intent-filter>
      <action android:name="android.intent.action.MAIN" />
      <category android:name="android.intent.category.LAUNCHER" />
   </intent-filter>

   <intent-filter>
      <action android:name="android.intent.action.VIEW" />
      <category android:name="android.intent.category.DEFAULT" />
      <category android:name="android.intent.category.BROWSABLE" />
      <data android:scheme="adjustExample" />
   </intent-filter>

   <intent-filter android:autoVerify="true">
    <action android:name="android.intent.action.VIEW" />
    <category android:name="android.intent.category.DEFAULT" />
    <category android:name="android.intent.category.BROWSABLE" />
    <data android:scheme="http" android:host="insights.go.link" />
    <data android:scheme="https" android:host="insights.go.link" />
   </intent-filter>

</activity>
```

</CodeBlock>
<Callout type="info">

`insights.go.link` は、Android アプリリンクとして定義されたブランドドメインです。

</Callout>

これで、アプリはURIスキームとAndroidアプリリンクの両方を処理できるようになります。宣言されたURIスキームまたはAndroidアプリリンクのいずれかに一致するリンクをユーザーがクリックすると、アプリが自動的に開きます。

ユーザーが **スキーム名** を含む`deep_link`パラメーターを持つリンクをクリックすると、アクティビティが起動します。

<CodeBlock highlight="deep_link=adjustExample%3A%2F%2F">

```html
https://app.adjust.com/abc123?deep_link=adjustExample%3A%2F%2F
```

</CodeBlock>

## [ディープリンク情報にアクセスする](access-deep-link-information)

`deep_link`パラメーターコンテンツの配信場所を指定できます。これを行うには、`AndroidManifest.xml`ファイルでアクティビティに`android:launchMode`プロパティを設定してください。

<Callout type="seealso">

詳細は、[`android:launchMode` ドキュメント](https://developer.android.com/guide/topics/manifest/activity-element.html)を参照してください。

</Callout>

Adjust SDKは、`onCreate`または`onNewIntent`メソッドを使ってアクティビティのintentオブジェクト内にディープリンク情報を配信します。アプリが起動し、これらのメソッドのいずれかが起動すれば、ディープリンクコンテンツにアクセスできます。その後、アプリの他の部分でこの情報をアクセスできます。

`onCreate`または`onNewIntent`メソッド内で`getData()`メソッドを呼び出すことで、ディープリンク情報を抽出できます。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val data = intent.data
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab>
<Tab title="Java" sync="java">

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
   super.onCreate(savedInstanceState);
   setContentView(R.layout.activity_main);

   Intent intent = getIntent();
   Uri data = intent.getData();
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab>
</Tabs>
<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
override fun onNewIntent(intent: Intent?) {
   super.onNewIntent(intent)
   val data = intent?.data
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab>
<Tab title="Java" sync="java">

```java
@Override
protected void onNewIntent(Intent intent) {
   super.onNewIntent(intent);

   Uri data = intent.getData();
   // data.toString() -> This is your deep_link parameter value.
}
```

</Tab>
</Tabs>

## [ディファードディープリンク](deferred-deep-linking)

Adjust SDKは、デフォルトでディファードディープリンクを開きます。追加の設定は必要ありません。この動作を無効化するには、`AdjustConfig.setOnDeferredDeeplinkResponseListener`メソッドを使用して、ディファード ディープリンク コールバックを設定する必要があります。

### [ディファードディープリンクのコールバックを設定する](set-up-a-deferred-deep-link-callback)

<CodeBlock title="メソッドシグネチャー">

```java
public void setOnDeferredDeeplinkResponseListener(OnDeferredDeeplinkResponseListener onDeferredDeeplinkResponseListener)
```

</CodeBlock>

Adjust SDKがディファードディープリンクを受け取った際に、デリゲート関数を呼び出すように設定することができます。このデリゲート関数は、ディープリンクを`String`引数で受け取ります。

ディープリンクを開く場合は、デリゲート関数で`true`を返してください。ファイルを開かない場合は、 `false`を返します。

<Tabs>
<Tab title="Kotlin" sync="kotlin">
<CodeBlock highlight="{range: 3-7}">

```kotlin
val config = AdjustConfig(this, appToken, environment)
//...
config.setOnDeferredDeeplinkResponseListener { deeplink ->
   Log.d("example", "Deferred deep link callback called!")
   Log.d("example", "Deep link URL: $deeplink")
   true
}
//...
Adjust.initSdk(config)
```

</CodeBlock>
</Tab>
<Tab title="Java" sync="java">
<CodeBlock highlight="{range: 3-12}">

```java
AdjustConfig config = new AdjustConfig(this, appToken, environment);
//...
// Evaluate the deeplink to be launched.
config.setOnDeferredDeeplinkResponseListener(new OnDeferredDeeplinkResponseListener() {
   @Override
   public boolean launchReceivedDeeplink(Uri deeplink) {
      Log.d("example", "Deferred deep link callback called!");
      Log.d("example", "Deep link URL: " + deeplink);

      return true;
   }
});
//...
Adjust.initSdk(config);
```

</CodeBlock>
</Tab>
</Tabs>

### [例](example-1)

この例では、コールバック関数で `false`値を返すことで、SDKがアクティビティを起動しないようにする方法を示しています。

<Tabs>
<Tab title="Kotlin" sync="kotlin">
<CodeBlock highlight="false">

```kotlin
config.setOnDeferredDeeplinkResponseListener { deeplink ->
   false
}
```

</CodeBlock>
</Tab>
<Tab title="Java" sync="java">
<CodeBlock highlight="false">

```java
config.setOnDeferredDeeplinkResponseListener(new OnDeferredDeeplinkResponseListener() {
   @Override
   public boolean launchReceivedDeeplink(Uri deeplink) {
      return false;
   }
});
```

</CodeBlock>
</Tab>
</Tabs>

## [ディープリンクによるリアトリビューション](reattribution-via-deep-links)

<CodeBlock title="メソッドシグネチャー">

```java
public static void processDeeplink(Uri url, Context context)
```

</CodeBlock>

Adjustはディープリンクを使ったリエンゲージメントキャンペーンをサポートしています。詳細は、[Campaign Labのディープリンク](https://help.adjust.com/ja/article/deep-links)をご覧ください。

ユーザーをリアトリビュートするには、オープニングアクティビティの`onCreate`メソッドと`onNewIntent`メソッドで`Adjust.processDeeplink`メソッドを呼び出す必要があります。Adjust SDKは次に、ディープリンク内の新しいアトリビューションデータを検索します。SDKが新しい情報を見つけた場合、その情報をAdjustのサーバーに転送し、リアトリビューションを行います。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
override fun onCreate(savedInstanceState: Bundle?) {
   super.onCreate(savedInstanceState)
   setContentView(R.layout.activity_main)

   val intent = intent
   val data = intent.data
   Adjust.processDeeplink(data, applicationContext)
}
```

</Tab>
<Tab title="Java" sync="java">

```java
@Override
protected void onCreate(Bundle savedInstanceState) {
    super.onCreate(savedInstanceState);
    setContentView(R.layout.activity_main);

    Intent intent = getIntent();
    Uri data = intent.getData();
    Adjust.processDeeplink(data, getApplicationContext());
}
```

</Tab>
</Tabs>

## [リンクのresolution（解析と変換）](link-resolution)

<CodeBlock title="メソッドシグネチャー">

```java
public static void resolveLink(final String url,
                               final String[] resolveUrlSuffixArray,
                               final AdjustLinkResolutionCallback adjustLinkResolutionCallback)
```

</CodeBlock>

一部のEメールサービスプロバイダー（ESP）は、マーケティングキャンペーンに独自のカスタムドメインを使用しています。カスタムドメインでクリックを計測する場合は、SDKを設定してリンクを解析する必要があります。これを行うには、 `AdjustLinkResolution`クラスの`resolveLink`メソッドを呼び出します。Adjust SDKはカスタムリンクをたどって、ディープリンクを開いた時にそれを解析します。これにより、Eメール計測キャンペーンとのやり取りを記録することが可能です。

`resolveLinkWithUrl`メソッドは以下の引数を受け取ります：

-  `url` （`String`）：アプリを起動したディープリンク
-  `resolveUrlSuffixArray` （`String[]`）：解析する必要がある設定済みキャンペーンのカスタムドメイン。
-  `adjustLinkResolutionCallback` （`AdjustLinkResolutionCallback`）：最終URLを返すコールバック

このメソッドは、`resolveUrlSuffixArray`内のドメインに対してディープリンクを確認します。一致するものが見つからない場合、ディープリンクURLをそのまま転送します。一致するものが見つかった場合、リンクの解析を試み、結果のディープリンクを返します。その後、これをコールバックパラメーターに保管します。

<Callout type="note">

URLの解析を試みると、Adjust SDKは最大10のリダイレクトをフォローアップします。さらに、SDKはフォローした最新のURLをコールバックURLとして返します。リダイレクトが10以上ある場合、SDKは **10番目** のリダイレクトURLを返します。

</Callout>

その後、返されたディープリンクを使用してユーザーをリアトリビュートできます。これを行うには、ディープリンクを`Adjust.processDeeplink`メソッドにパスします。

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
AdjustLinkResolution.resolveLink(url, arrayOf("example.com"), object : AdjustLinkResolution.AdjustLinkResolutionCallback {
   override fun resolvedLinkCallback(resolvedLink: Uri) {
         Adjust.processDeeplink(resolvedLink, applicationContext)
   }
})
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustLinkResolution.resolveLink(url, new String[]{"example.com"}, new AdjustLinkResolution.AdjustLinkResolutionCallback() {
   @Override
   public void resolvedLinkCallback(Uri resolvedLink) {
      Adjust.processDeeplink(resolvedLink, getApplicationContext());
   }
});
```

</Tab>
</Tabs>
